Added UberContext and plain servlet, ContainerListener, expanded readme